<resources>
    <string name="app_name">StockObserver</string>
    <string name="stocks">Stocks</string>
    <string name="favourite">Favourite</string>
    <string name="search_hint">Find company or ticker</string>
    <string name="search_popular">Popular requests</string>
    <string name="search_looking_for">You’ve searched for this</string>
    
    <string name="chart">Chart</string>
    <string name="summary">Summary</string>
    <string name="news">News</string>
    <string name="forecasts">Forecasts</string>
    <string name="_1">1</string>
    <string name="_15">15</string>
    <string name="hour">H</string>
    <string name="day">D</string>
    <string name="week">W</string>
    <string name="month">M</string>
    <string name="no_news_for_the_last_month">No news for the last two week</string>
    <string name="click_to_read_full">Click to read full</string>
    <string name="click_to_hide">Click to hide</string>
    <string name="currency">Currency:</string>
    <string name="country">Country:</string>
    <string name="exchange">Exchange:</string>
    <string name="market_capitalization">Market capitalization:</string>
    <string name="ipo">IPO:</string>
    <string name="share_outstanding">Share outstanding:</string>
    <string name="finnhub_industry">Finnhub Industry:</string>
    <string name="url">URL:</string>
</resources>