<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <TextView
        android:id="@+id/currentPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textColor="@color/black_text"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/chart"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ChartView" />

    <TextView
        android:id="@+id/currentMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/green_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/chart"
        app:layout_constraintStart_toStartOf="@+id/chart"
        app:layout_constraintTop_toBottomOf="@+id/currentPrice"
        tools:text="ChartView" />


    <com.yandex.stockobserver.ui.company.Chart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/currentPrice"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentMargin" />

    <TextView
        android:id="@+id/minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_background"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/_1"
        android:textColor="@color/black_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/minute15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart" />

    <TextView
        android:id="@+id/minute15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_background"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:text="@string/_15"
        android:textColor="@color/black_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/hour"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minute"
        app:layout_constraintTop_toBottomOf="@+id/chart" />

    <TextView
        android:id="@+id/hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_background"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/hour"
        android:textColor="@color/black_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/day"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minute15"
        app:layout_constraintTop_toBottomOf="@+id/chart" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_background"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/day"
        android:textColor="@color/black_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/week"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hour"
        app:layout_constraintTop_toBottomOf="@+id/chart" />

    <TextView
        android:id="@+id/week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_background"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/week"
        android:textColor="@color/black_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/month"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/chart" />

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_background"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/month"
        android:textColor="@color/black_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/week"
        app:layout_constraintTop_toBottomOf="@+id/chart" />

</merge>